--- a/DMContentCreator/Resources/iPhone-DMContentCreator.storyboard
+++ b/DMContentCreator/Resources/iPhone-DMContentCreator.storyboard
@@ -14,22 +14,22 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="90" id="EOW-G5-mA0">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="90" id="EOW-G5-mA0" customClass="DMContentCreatorCell">
                                 <rect key="frame" x="0.0" y="86" width="320" height="90"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="EOW-G5-mA0" id="8ii-9F-NjB">
                                     <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="el6-O9-g0a">
-                                            <rect key="frame" x="20" y="19" width="50" height="50"/>
-                                            <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="el6-O9-g0a">
+                                            <rect key="frame" x="20" y="20" width="50" height="50"/>
+                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="50" id="ZrS-sT-Igf"/>
                                                 <constraint firstAttribute="height" constant="50" id="gd7-AR-lTL"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Information" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qcz-n0-WtI">
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Content Information" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qcz-n0-WtI">
                                             <rect key="frame" x="84" y="20" width="216" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="216" id="Lgi-PE-Ack"/>
@@ -38,8 +38,8 @@
                                             <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                             <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         </label>
-                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Description &amp; details" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbt-qq-uFe">
-                                            <rect key="frame" x="84" y="47" width="216" height="21"/>
+                                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" misplaced="YES" text="Description &amp; details" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dbt-qq-uFe">
+                                            <rect key="frame" x="84" y="49" width="216" height="21"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="x8W-Iq-WHS"/>
                                             </constraints>
@@ -58,6 +58,11 @@
                                     <constraint firstAttribute="bottom" secondItem="dbt-qq-uFe" secondAttribute="bottom" constant="22" id="ouv-xj-MeM"/>
                                     <constraint firstAttribute="trailing" secondItem="Qcz-n0-WtI" secondAttribute="trailing" constant="20" id="rih-M2-gZG"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="pluginDetailsLabel" destination="dbt-qq-uFe" id="4tB-8k-rIf"/>
+                                    <outlet property="pluginTitleLabel" destination="Qcz-n0-WtI" id="WaN-LK-cSf"/>
+                                    <outlet property="thumbnailView" destination="el6-O9-g0a" id="Pwh-J0-OMc"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
